web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/inner-parens/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,13)
1|var foo = ((foo)) => {};
 |           ^
